Global Exception Handler will be coded

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 server.servlet.context-path=/workintech
 server.port=9000
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/workintech30
 spring.datasource.username=postgres
-spring.datasource.password=changeme
+spring.datasource.password=peninsula03
 spring.jpa.hibernate.ddl-auto=update
